Add response histograms

--- a/docs/200518/dabercro_hbb_200518.tex
+++ b/docs/200518/dabercro_hbb_200518.tex
@@ -97,6 +97,87 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Response in 2018}
+
+  \centering
+  MC is normalized to Data
+  \vfill
+
+  \begin{columns}
+    \begin{column}{0.33\linewidth}
+      \centering
+      \textcolor{blue}{No Smearing} \\
+      \includegraphics[width=\linewidth]{200518_2018_custom_norm/smearplot_jet1_adjusted_response.pdf}
+    \end{column}
+    \begin{column}{0.34\linewidth}
+      \centering
+      \textcolor{blue}{Nominal} \\
+      \includegraphics[width=\linewidth]{200518_2018_custom_norm/smearplot_jet1_adjusted_response_smeared_scaled_nominal.pdf}
+    \end{column}
+    \begin{column}{0.33\linewidth}
+      \centering
+      \textcolor{blue}{Additional} \\
+      \includegraphics[width=\linewidth]{200518_2018_custom_norm/smearplot_jet1_adjusted_response_smeared_scaled_up.pdf}
+    \end{column}
+  \end{columns}
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{Response in 2018ABC}
+
+  \centering
+  MC is normalized to Data
+  \vfill
+
+  \begin{columns}
+    \begin{column}{0.33\linewidth}
+      \centering
+      \textcolor{blue}{No Smearing} \\
+      \includegraphics[width=\linewidth]{200518_2018ABC_custom/smearplot_jet1_adjusted_response.pdf}
+    \end{column}
+    \begin{column}{0.34\linewidth}
+      \centering
+      \textcolor{blue}{Nominal} \\
+      \includegraphics[width=\linewidth]{200518_2018ABC_custom/smearplot_jet1_adjusted_response_smeared_scaled_nominal.pdf}
+    \end{column}
+    \begin{column}{0.33\linewidth}
+      \centering
+      \textcolor{blue}{Additional} \\
+      \includegraphics[width=\linewidth]{200518_2018ABC_custom/smearplot_jet1_adjusted_response_smeared_scaled_up.pdf}
+    \end{column}
+  \end{columns}
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{Response in 2018D}
+
+  \centering
+  MC is normalized to Data
+  \vfill
+
+  \begin{columns}
+    \begin{column}{0.33\linewidth}
+      \centering
+      \textcolor{blue}{No Smearing} \\
+      \includegraphics[width=\linewidth]{200518_2018D_custom/smearplot_jet1_adjusted_response.pdf}
+    \end{column}
+    \begin{column}{0.34\linewidth}
+      \centering
+      \textcolor{blue}{Nominal} \\
+      \includegraphics[width=\linewidth]{200518_2018D_custom/smearplot_jet1_adjusted_response_smeared_scaled_nominal.pdf}
+    \end{column}
+    \begin{column}{0.33\linewidth}
+      \centering
+      \textcolor{blue}{Additional} \\
+      \includegraphics[width=\linewidth]{200518_2018D_custom/smearplot_jet1_adjusted_response_smeared_scaled_up.pdf}
+    \end{column}
+  \end{columns}
+
+\end{frame}
+
+\begin{frame}
   \frametitle{No Smearing}
 
   \twofigs{2018ABC ReReco}
@@ -123,6 +204,26 @@
           {200518_smear_200518_2018ABC_custom_divmean/resolution_jet1_adjusted_response_smeared_scaled_up_smear_0.pdf}
           {2018D PromptReco}
           {200518_smear_200518_2018D_custom_divmean/resolution_jet1_adjusted_response_smeared_scaled_up_smear_0.pdf}
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{Before Scaling}
+
+  \twofigs{2018ABC ReReco}
+          {200518_smear_200518_2018ABC_custom_divmean/mean_jet1_adjusted_response_smear_0.pdf}
+          {2018D PromptReco}
+          {200518_smear_200518_2018D_custom_divmean/mean_jet1_adjusted_response_smear_0.pdf}
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{After Scaling}
+
+  \twofigs{2018ABC ReReco}
+          {200518_smear_200518_2018ABC_custom_divmean/mean_jet1_adjusted_response_smeared_scaled_nominal_smear_0.pdf}
+          {2018D PromptReco}
+          {200518_smear_200518_2018D_custom_divmean/mean_jet1_adjusted_response_smeared_scaled_nominal_smear_0.pdf}
 
 \end{frame}
 
