--- a/docs/200624/dabercro_hbb_200624.tex
+++ b/docs/200624/dabercro_hbb_200624.tex
@@ -453,7 +453,9 @@
 
   \begin{itemize}
   \item Updated smearing numbers are ready for NanoAODv7
+  \item Implemented suggestions from JetMET
   \item Scaling added to help MC and Data agreement
+  \item Uncertainties are smaller than the discovery analysis
   \end{itemize}
 
 \end{frame}
@@ -466,10 +468,11 @@
   \item Selection of leptons is the same as before
   \item This time, there is no kinematic limits on the trailing jet
   \item $V_{p_T} > \SI{150}{GeV}$
+  \item Kinematic fit is applied to improve \\
+    the di-jet $p_T$ response and mass resolution
+  \item Kinematic fit results are useful as classifier inputs, \\
+    even for the boosted selection
   \end{itemize}
-
-  \vfill
-  Let's see how the di-jet kinematic fit improves the analysis
 
 \end{frame}
 
@@ -513,10 +516,10 @@
       \textcolor{blue}{$150 < V_{p_T} < \SI{250}{GeV}$} \\
       \includegraphics[width=0.8\linewidth]{200622_fit/fits_SR_med_Hmass_0j__.pdf} \\
       \textcolor{blue}{$\SI{250}{GeV} < V_{p_T}$} \\
-      \includegraphics[width=0.8\linewidth]{200622_fit/fits_SR_high_Hmass_0j__.pdf}
+      \includegraphics[width=0.8\linewidth]{figs/200624_fit_v2/fits_SR_high_Hmass_0j__.pdf}
     \end{column}
     \begin{column}{0.5\linewidth}
-      \centering
+      \begin{center}
       \textcolor{blue}{$\SI{150}{GeV} < V_{p_T}$} \\
       \includegraphics[width=0.8\linewidth]{200622_fit/fits_SR_medhigh_Hmass_0j__.pdf} \\
 
@@ -532,6 +535,8 @@
         \hline
       \end{tabular}
       }
+      \end{center}
+      $\Leftarrow$ Fat Jet $\sigma/\mu = 0.116$
     \end{column}
   \end{columns}
 
@@ -625,6 +630,75 @@
   \end{columns}
 
 \end{frame}
+
+\begin{frame}
+  \frametitle{Di-jet Mass Performance -- One Additional Jet}
+
+  \begin{columns}
+    \begin{column}{0.5\linewidth}
+      \centering
+      \textcolor{blue}{$150 < V_{p_T} < \SI{250}{GeV}$} \\
+      \includegraphics[width=0.8\linewidth]{200624_fit/fits_SR_med_Hmass_1j__.pdf} \\
+      \textcolor{blue}{$\SI{250}{GeV} < V_{p_T}$} \\
+      \includegraphics[width=0.8\linewidth]{200624_fit/fits_SR_high_Hmass_1j__.pdf}
+    \end{column}
+    \begin{column}{0.5\linewidth}
+      \centering
+      \textcolor{blue}{$\SI{150}{GeV} < V_{p_T}$} \\
+      \includegraphics[width=0.8\linewidth]{200624_fit/fits_SR_medhigh_Hmass_1j__.pdf} \\
+
+      Values of $\sigma/\mu$
+      {\scriptsize
+      \begin{tabular}{|r|c|c|c|}
+        \hline
+        & Low $p_T$ & High $p_T$ & incl. \\
+        \hline
+        No R. & 0.179 & 0.143 & 0.169 \\
+        Reg.  & 0.146 & 0.128 & 0.141 \\
+        Fit   & 0.152 & 0.131 & 0.146 \\
+        \hline
+      \end{tabular}
+      }
+    \end{column}
+  \end{columns}
+
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Di-jet Mass Performance -- Two or More Additional Jets}
+
+  \begin{columns}
+    \begin{column}{0.5\linewidth}
+      \centering
+      \textcolor{blue}{$150 < V_{p_T} < \SI{250}{GeV}$} \\
+      \includegraphics[width=0.8\linewidth]{200624_fit/fits_SR_med_Hmass_ge2j__.pdf} \\
+      \textcolor{blue}{$\SI{250}{GeV} < V_{p_T}$} \\
+      \includegraphics[width=0.8\linewidth]{200624_fit/fits_SR_high_Hmass_ge2j__.pdf}
+    \end{column}
+    \begin{column}{0.5\linewidth}
+      \centering
+      \textcolor{blue}{$\SI{150}{GeV} < V_{p_T}$} \\
+      \includegraphics[width=0.8\linewidth]{200624_fit/fits_SR_medhigh_Hmass_ge2j__.pdf} \\
+
+      Values of $\sigma/\mu$
+      {\scriptsize
+      \begin{tabular}{|r|c|c|c|}
+        \hline
+        & Low $p_T$ & High $p_T$ & incl. \\
+        \hline
+        No R. & 0.216 & 0.185 & 0.204 \\
+        Reg.  & 0.170 & 0.156 & 0.165 \\
+        Fit   & 0.187 & 0.169 & 0.181 \\
+        \hline
+      \end{tabular}
+      }
+    \end{column}
+  \end{columns}
+
+\end{frame}
+
+
 
 \backupend
 
