What we have from old results

--- a/docs/201118/dabercro_hbb_201118.tex
+++ b/docs/201118/dabercro_hbb_201118.tex
@@ -189,41 +189,49 @@
 \begin{frame}
   \frametitle{Background Scale Factors}
 
-SF_B_high_2018_btag_BOOST    7.1264e-01 +/-  6.14e-02
-SF_C_failB_high_2018_btag_BOOST    8.9485e-01 +/-  1.03e-01
-SF_C_passB_high_2018_btag_BOOST    1.6733e+00 +/-  2.67e-01
-SF_LF_high_2018_btag_BOOST    9.1874e-01 +/-  3.73e-02
-SF_TT_Wln_2018    8.4404e-01 +/-  5.79e-02
-SF_TT_Zll_2018    8.1843e-01 +/-  7.69e-02
-SF_TT_Znn_2018    8.1993e-01 +/-  5.51e-02
-SF_TT_high_2018_btag_BOOST    9.3299e-01 +/-  1.59e-02
-SF_Wj0b_c_Wln_2018    1.4600e+00 +/-  1.64e-01
-SF_Wj0b_udsg_Wln_2018    8.6231e-01 +/-  7.23e-02
-SF_Wjb_Wln_2018    1.0760e+00 +/-  1.16e-01
-SF_Zj0b_c_Zll_2018    1.5513e+00 +/-  5.36e-01
-SF_Zj0b_c_Znn_2018    1.1356e+00 +/-  1.77e-01
-SF_Zj0b_udsg_Zll_2018    9.6891e-01 +/-  7.08e-02
-SF_Zj0b_udsg_Znn_2018    1.0831e+00 +/-  8.58e-02
-SF_Zjb_Zll_2018    1.2190e+00 +/-  8.57e-02
-SF_Zjb_Znn_2018    1.3759e+00 +/-  8.01e-02
+  \centering
 
-SF_B_high_2017_btag_BOOST    6.2285e-01 +/-  8.14e-02
-SF_C_failB_high_2017_btag_BOOST    2.1255e+00 +/-  2.40e-01
-SF_C_passB_high_2017_btag_BOOST    2.3102e+00 +/-  3.29e-01
-SF_LF_high_2017_btag_BOOST    7.9746e-01 +/-  2.17e-02
-SF_TT_Wln_2017    8.8200e-01 +/-  5.98e-02
-SF_TT_Zll_2017    7.9685e-01 +/-  6.94e-02
-SF_TT_Znn_2017    1.0114e+00 +/-  6.69e-02
-SF_TT_high_2017_btag_BOOST    8.9836e-01 +/-  1.63e-02
-SF_Wj0b_c_Wln_2017    8.9129e-01 +/-  1.13e-01
-SF_Wj0b_udsg_Wln_2017    1.0637e+00 +/-  8.15e-02
-SF_Wjb_Wln_2017    1.2221e+00 +/-  1.24e-01
-SF_Zj0b_c_Zll_2017    1.1967e+00 +/-  1.84e-01
-SF_Zj0b_c_Znn_2017    1.3768e+00 +/-  1.97e-01
-SF_Zj0b_udsg_Zll_2017    1.0323e+00 +/-  6.74e-02
-SF_Zj0b_udsg_Znn_2017    1.3702e+00 +/-  1.22e-01
-SF_Zjb_Zll_2017    1.2013e+00 +/-  8.35e-02
-SF_Zjb_Znn_2017    1.5872e+00 +/-  9.40e-02
+  {\small
+  \begin{tabular}{|c|c|c|}
+    \hline
+ & 2017 & 2018 \\
+\hline
+B\_high\_btag\_BOOST & 0.62 \pm 0.08 & 0.71 \pm 0.06 \\
+\hline
+C\_failB\_high\_btag\_BOOST & 2.13 \pm 0.24 & 0.89 \pm 0.10 \\
+\hline
+C\_passB\_high\_btag\_BOOST & 2.31 \pm 0.33 & 1.67 \pm 0.27 \\
+\hline
+LF\_high\_btag\_BOOST & 0.80 \pm 0.02 & 0.92 \pm 0.04 \\
+\hline
+TT\_Wln & 0.88 \pm 0.06 & 0.84 \pm 0.06 \\
+\hline
+TT\_Zll & 0.80 \pm 0.07 & 0.82 \pm 0.08 \\
+\hline
+TT\_Znn & 1.01 \pm 0.07 & 0.82 \pm 0.06 \\
+\hline
+TT\_high\_btag\_BOOST & 0.90 \pm 0.02 & 0.93 \pm 0.02 \\
+\hline
+Wj0b\_c\_Wln & 0.89 \pm 0.11 & 1.46 \pm 0.16 \\
+\hline
+Wj0b\_udsg\_Wln & 1.06 \pm 0.08 & 0.86 \pm 0.07 \\
+\hline
+Wjb\_Wln & 1.22 \pm 0.12 & 1.08 \pm 0.12 \\
+\hline
+Zj0b\_c\_Zll & 1.20 \pm 0.18 & 1.55 \pm 0.54 \\
+\hline
+Zj0b\_c\_Znn & 1.38 \pm 0.20 & 1.14 \pm 0.18 \\
+\hline
+Zj0b\_udsg\_Zll & 1.03 \pm 0.07 & 0.97 \pm 0.07 \\
+\hline
+Zj0b\_udsg\_Znn & 1.37 \pm 0.12 & 1.08 \pm 0.09 \\
+\hline
+Zjb\_Zll & 1.20 \pm 0.08 & 1.22 \pm 0.09 \\
+\hline
+Zjb\_Znn & 1.59 \pm 0.09 & 1.38 \pm 0.08 \\
+\hline
+  \end{tabular}
+  }
 
 \end{frame}
 
